fixed alignment

--- a/frontend/src/styles/Home.scss
+++ b/frontend/src/styles/Home.scss
@@ -21,6 +21,7 @@
       width: 100%;
       height: 20vh;
       background-color: var(--ranking);
+      text-align: center;
 
       table {
         padding-top: 3vh;
